Update to button styling. Fixed issue with image distrotion on smaller sized screens

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 		<section class="stage">
 			<img src="src/img/trees.jpg" alt="tree brnach" title="Bare tree branches">
 			<div class="stage-text">
-				<h1 class="stage-text-headline">This is a mix</h1>
+				<h1 class="stage-text-headline">This is mixed with that</h1>
 			</div>
 		</section>
 		<section class="controls">
 			<div class="blend-controls">
-				<h2>The current mix-blend-mode: <span id="mode">color-burn</span></h2>
+				<h2>The current<br /> mix-blend-mode:<br /> 
+					<span id="mode">color-burn</span></h2>
 				<div class="blend-buttons">
 					<button data-blend="normal">Normal</button>
 					<button data-blend="multiply">multiply</button>
@@ -44,7 +45,7 @@
 			<div class="color-controls">
 				<h2>Select a color</h2>
 				<input type='text' class="basic"/>
-				<em id='basic-log'>Current color is: #E67878</em>
+				<p><em id='basic-log'>Current color is: #E67878</em></p>
 			</div>
 		</section>
 	</main>
