update to the site header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 	<link rel="stylesheet" href="css/app.min.css">
 </head>
 <body>
-	<header>
+	<header class="constrain site-header">
+		<h1>Working with the CSS mix-blend-mode property</h1>
+		<blockquote cite="https://developer.mozilla.org/en-US/docs/Web/CSS/mix-blend-mode">
+			The mix-blend-mode CSS property describes how an element's content should blend with the content of the element that is below it and the element's background.
+		</blockquote>
 	</header>
 	<main class="constrain">
 		<section class="stage">
