update to header and footer content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 	<header class="constrain site-header">
-		<h1>Working with the CSS mix-blend-mode property</h1>
+		<h1>Working With the CSS mix-blend-mode Property</h1>
+		<hr />
 		<blockquote cite="https://developer.mozilla.org/en-US/docs/Web/CSS/mix-blend-mode">
 			The mix-blend-mode CSS property describes how an element's content should blend with the content of the element that is below it and the element's background.
 		</blockquote>
@@ -53,7 +54,10 @@
 			</div>
 		</section>
 	</main>
-	<footer>
+	<footer class="site-footer constrain">
+		<hr />
+		<p>Jeffrey Smith</p>
+		<p>Find the code for this project on <a href="#">GitHub</a></p>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 		<script src="js/spectrum.min.js"></script>
 		<script src="js/app.min.js"></script>
