update the contol panel. Added README file

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<div class="blend-controls">
 				<h2>The current<br /> mix-blend-mode:<br /> 
 					<span id="mode">color-burn</span></h2>
+					<p>Click one of the buttons below to change the mix-blend-mode of the text box.</p>
 				<div class="blend-buttons">
 					<button data-blend="normal">Normal</button>
 					<button data-blend="multiply">multiply</button>
