Update to foot link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<footer class="site-footer constrain">
 		<hr />
 		<p>Jeffrey Smith</p>
-		<p>Find the code for this project on <a href="#">GitHub</a></p>
+		<p>Find the code for this project on <a href="https://github.com/jeffreysmithart/mix-blend-mode">GitHub</a></p>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 		<script src="js/spectrum.min.js"></script>
 		<script src="js/app.min.js"></script>
